# Sanding_task

./: README.md
control_robot/: CMakeLists.txt  package.xml
control_robot/behaviour_trees/: bt_tree.xml  seq_task.xml
control_robot/src/: behaviour.cpp  force_sub.cpp  sanding.cpp  task_control.cpp  test_unit1.cpp
control_robot/test/: solution_test_project.cpp  test_unit1.cpp  test_unit2.cpp  test_unit3.cpp  test_unit4.cpp  test_unit5.cpp
custom_service/: CMakeLists.txt
robot_moveit/: CMakeLists.txt  package.xml
robot_moveit/config/: joint_limits.yaml  moveit_controllers.yaml  robot.srdf
robot_moveit/src/: action_client.cpp  pos_goal.cpp  robot_server.cpp  task_server.cpp
ur_description_pkg/config/: box.world  my_controllers.yaml
ur_description_pkg/launch/: gazebo.launch.py
ur_description_pkg/urdf/: robot.urdf.xacro  ros2_control.xacro
